--- a/RISCluster_CPU.yml
+++ b/RISCluster_CPU.yml
@@ -20,8 +20,7 @@ dependencies:
   - scipy
   - tensorboard
   - tqdm
+  - pyasdf  
   - pip
   - pip:
-    - git+https://github.com/NeptuneProjects/RISCluster.git
-    - git+https://github.com/NeptuneProjects/RISProcess.git
     - torchsummary
